# blog-sharing

1_pixta_seminar/1_how_does_machine_understand_the_audio/: how_does_machine_understand_the_audio.md
1_pixta_seminar/3_polar_seminar/: .gitignore  2_compare_without_read.ipynb  pyproject.toml
1_pixta_seminar/3_polar_seminar/data/: Parking_Violations_Issued.csv
1_pixta_seminar/3_polar_vs_pandas/code/: 0_prepare_data.ipynb  1_compare_with_read.ipynb  3_results_visualization.ipynb
2_pixta_business_trip/markdown/: 1_singapore_super_ai_2025_trip.md
