[project]
name = "3-polar-seminar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyspark>=4.0.0",
    "seaborn>=0.13.2",
]
